--- a/sass/_quiz-variables.scss
+++ b/sass/_quiz-variables.scss
@@ -2,7 +2,7 @@ $main-color-quiz:  #fff;
 $second-color-quiz: #434343;
 $third-color-quiz: #296C82;
 $fourth-color-quiz: #F1F9FB;
-$fifth-color-quiz: #8C8C8C;
+$fifth-color-quiz: #8c8c8c;
 $sixth-color-quiz: #49F050;
 $seventh-color-quiz: #EFCF24;
 $eighth-color-quiz: #DC1C1C;
