--- a/sass/quiz.scss
+++ b/sass/quiz.scss
@@ -82,6 +82,19 @@ button {
         height: 540px;
         box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
         border-radius: 30px;
+        &_question {
+            opacity: 0;
+            padding: 60px 120px;
+            height: auto;
+            min-height: 540px;
+        }
+        &_result {
+            opacity: 0;
+            padding: 60px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
     &__subtitle {
         font-weight: 600;
@@ -109,12 +122,8 @@ button {
             color: $main-color-quiz;
         }
     }
-    &__box_question {
-        padding: 60px 120px;
-        height: auto;
-        min-height: 540px;
-    }
     &__form_question {
+        opacity: 0;
         position: relative;
         &::after {
             content: attr(data-count);
@@ -295,12 +304,7 @@ button {
     }
 }
 
-.main__box_result {
-    padding: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+.main__box
 
 .result {
     &__box {
